--- a/.github/workflows/echo_context_information.yml
+++ b/.github/workflows/echo_context_information.yml
@@ -8,4 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
-      - run: echo ${{ toJSON(github.event) }}
+      - env:
+          EVENT_CONTEXT: ${{ toJSON(github.event) }}
+        run: |
+          echo $EVENT_CONTEXT
