--- a/.github/workflows/echo_context_information.yml
+++ b/.github/workflows/echo_context_information.yml
@@ -9,6 +9,6 @@ jobs:
     timeout-minutes: 3
     steps:
       - env:
-          EVENT_CONTEXT: ${{ toJSON(github.event) }}
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
         run: |
-          echo $EVENT_CONTEXT
+          echo $GITHUB_CONTEXT
